--- a/PyHomeRemote/res/values/strings.xml
+++ b/PyHomeRemote/res/values/strings.xml
@@ -8,5 +8,8 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_test_api">TestAPIActivity</string>
+    <string name="command_label">Enter custom command below, Overrides pull down list.</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
